<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReproductorActivity">

    <TextView
        android:id="@+id/text1_Repro"
        android:layout_width="213dp"
        android:layout_height="31dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="203dp"
        android:text="@string/text1_Repro"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text2_Repro"
        android:layout_width="169dp"
        android:layout_height="20dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="214dp"
        android:text="@string/text2_Repro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text1_Repro" />

    <TextView
        android:id="@+id/text3_Repro"
        android:layout_width="336dp"
        android:layout_height="18dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="214dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text2_Repro" />

    <Button
        android:id="@+id/button3"
        android:layout_width="65dp"
        android:layout_height="57dp"
        android:layout_marginBottom="320dp"
        android:text="Play"
        app:icon="@android:drawable/ic_media_play"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="66dp"
        android:layout_height="53dp"
        android:layout_marginBottom="324dp"
        android:text="Pause"
        app:icon="@android:drawable/ic_media_pause"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.13"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="60dp"
        android:layout_height="52dp"
        android:layout_marginBottom="320dp"
        android:text="Stop"
        app:icon="@android:drawable/checkbox_off_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.851"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/boton1_Repro"
        android:layout_width="366dp"
        android:layout_height="73dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="164dp"
        android:text="@string/boton1_Repro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>